--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["NNNNNSSSSSDATOS", "sinitservi"]
+  "cSpell.words": ["magneta", "NNNNNSSSSSDATOS", "sinitservi", "Wilyrex"]
 }
