--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "cSpell.words": ["magneta", "NNNNNSSSSSDATOS", "sinitservi", "Wilyrex"]
+  "cSpell.words": [
+    "Inventary",
+    "magneta",
+    "NNNNNSSSSSDATOS",
+    "psycopg",
+    "sinitservi",
+    "trylog",
+    "Wilyrex"
+  ]
 }
