--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,15 @@
 {
   "cSpell.words": [
+    "Fullmetal",
+    "Gurren",
     "Inventary",
+    "Lagann",
     "magneta",
+    "Naruto",
     "NNNNNSSSSSDATOS",
     "psycopg",
     "sinitservi",
+    "Tankōbon",
     "trylog",
     "Wilyrex"
   ]
