--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,24 @@
-myenv/
+# Ignore Visual Studio Code settings directory
+.vscode/
+
+# Ignore Python cache directories
+__pycache__/
+*.py[cod]
+
+# Ignore environment files
+.env
+*.env
+
+# Ignore log files and temporary files
+*.log
+*.tmp
+
+# Ignore compiled code and packages
+*.pyc
+*.pyo
+*.pyd
+*.so
+*.egg-info/
+
+# Ignore Jupyter Notebook checkpoints
+.ipynb_checkpoints/
