--- a/docker compose/Dockerfile
+++ b/docker compose/Dockerfile
@@ -6,5 +6,5 @@ ENV POSTGRES_USER postgres
 ENV POSTGRES_PASSWORD 1234
 
 # Copy the initialization script to the docker-entrypoint-initdb.d directory
-COPY init.sql /docker-entrypoint-initdb.d/
-
+COPY 01_init.sql /docker-entrypoint-initdb.d/
+COPY 02_insert_data.sql /docker-entrypoint-initdb.d/
